--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -10,25 +10,25 @@
         <div class="start-item">
             <div class="nav-item">
                 <a href="#" class="nav-link main-link" data-bs-toggle="dropdown">
-                    <i class="fa fa-envelope me-lg-2"></i>
+                    <i class="fa fa-bell me-lg-2"></i>
                     <span class="d-none d-lg-inline-flex">Rules</span>
                 </a>
             </div>
             <div class="nav-item">
                 <a href="#" class="nav-link main-link" data-bs-toggle="dropdown">
-                    <i class="fa fa-bell me-lg-2"></i>
+                    <i class="fa-solid fa-trophy me-lg-2"></i>
                     <span class="d-none d-lg-inline-flex">Challenge</span>
                 </a>
             </div>
             <div class="nav-item">
                 <a href="#" class="nav-link main-link" data-bs-toggle="dropdown">
-                    <i class="fa fa-bell me-lg-2"></i>
+                    <i class="fa-solid fa-chart-simple me-lg-2"></i>
                     <span class="d-none d-lg-inline-flex">ScoreBoard</span>
                 </a>
             </div>
             <div class="nav-item">
                 <a href="#" class="nav-link main-link" data-bs-toggle="dropdown">
-                    <i class="fa fa-bell me-lg-2"></i>
+                    <i class="fa-brands fa-discord me-lg-2"></i>
                     <span class="d-none d-lg-inline-flex">Discord</span>
                 </a>
             </div>
@@ -40,7 +40,7 @@
                 </a>
             </div>
             <div class="nav-item">
-                <a href="#" class="nav-link main-link" data-bs-toggle="dropdown">
+                <a href="/login" class="nav-link main-link" data-bs-toggle="dropdown">
                     <span class="d-none d-lg-inline-flex">Login</span>
                 </a>
             </div>
