--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -5,6 +5,21 @@
     --dark: #000000;
 }
 
+/*** layout ***/
+.layout-nav {
+    width: 100%;
+    height: 7vh;
+    display: flex;
+    justify-content : center;
+}
+.layout-content {
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    justify-content : center;
+}
+
+
 
 /*** Navbar ***/
 .content .navbar .navbar-nav .nav-link {
@@ -72,5 +87,21 @@
 @media (max-width: 575.98px) {
     .content .navbar .navbar-nav .nav-link {
         margin-left: 15px;
+    }
+}
+@media (min-width: 1280px){
+    .navbar{
+        width: 1280px;
+    }
+    .content-login {
+        width: 1280px;
+    }
+}
+@media (min-width: 1660px){
+    .navbar{
+        width: 1660px;
+    }
+    .content-login {
+        width: 1660px;
     }
 }
