--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -19,30 +19,29 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<div>
+<div class="layout-nav">
     <nav th:replace="nav :: nav"></nav>
 </div>
-<div>
-    <div class="container-fluid position-relative d-flex p-0">
+<div class="layout-content">
+    <div class="content-login container-fluid position-relative d-flex p-0">
         <div class="container-fluid">
-            <div class="row h-100 align-items-center justify-content-center" style="min-height: 100vh;">
+            <div class="row h-100 align-items-center justify-content-center" style="min-height: 90vh;">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
                     <div class="bg-secondary rounded p-4 p-sm-5 my-4 mx-3">
                         <div class="d-flex align-items-center justify-content-between mb-3">
-                            <a href="index.html" class="">
-                                <h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>DarkPan</h3>
-                            </a>
-                            <h3>LOGIN</h3>
+                            <div style="text-align: center; width: 100%;">
+                                <h2 class="text-primary">로그인</h2>
+                            </div>
                         </div>
                         <div class="mb-3">
-                            <span>ID</span>
+                            <span>아이디</span>
                             <input type="text" class="form-control" id="id" placeholder="ID">
                         </div>
                         <div class="mb-4">
-                            <span>Password</span>
+                            <span>비밀번호</span>
                             <input type="password" class="form-control" id="password" placeholder="Password">
                         </div>
-                        <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Login</button>
+                        <button type="submit" class="btn btn-primary py-3 w-100 mb-4">로그인</button>
                         <p class="text-center mb-0">Don't have an Account? <a href="/register">register</a></p>
                     </div>
                 </div>
