--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -22,10 +22,10 @@
 <div class="layout-nav">
     <nav th:replace="nav :: nav"></nav>
 </div>
-<div class="layout-content">
+<div class="layout-content-no-footer">
     <div class="content-login container-fluid position-relative d-flex p-0">
         <div class="container-fluid">
-            <div class="row h-100 align-items-center justify-content-center" style="min-height: 90vh;">
+            <div class="row h-100 align-items-center justify-content-center" style="max-height: 867px;">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
                     <div class="bg-secondary rounded p-4 p-sm-5 my-4 mx-3">
                         <div class="d-flex align-items-center justify-content-between mb-3">
