--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -14,6 +14,8 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script th:src="@{/js/login/login.js}"></script>
 </head>
 <body>
 <div class="layout-nav">
@@ -24,21 +26,24 @@
         <div class="container-fluid">
             <div class="row h-100 align-items-center justify-content-center" style="max-height: 867px;">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
+
                     <div class="bg-secondary rounded p-4 p-sm-5 my-4 mx-3">
                         <div class="d-flex align-items-center justify-content-between mb-3">
                             <div style="text-align: center; width: 100%;">
                                 <h2 class="text-primary">로그인</h2>
                             </div>
                         </div>
-                        <div class="mb-3">
-                            <span>아이디</span>
-                            <input type="text" class="form-control" id="id" placeholder="ID">
-                        </div>
-                        <div class="mb-4">
-                            <span>비밀번호</span>
-                            <input type="password" class="form-control" id="password" placeholder="Password">
-                        </div>
-                        <button type="submit" class="btn btn-primary py-3 w-100 mb-4">로그인</button>
+                        <form method="POST" th:action="@{/login-process}">
+                            <div class="mb-3">
+                                <span>아이디</span>
+                                <input type="text" name="userId" class="form-control" id="id" placeholder="ID">
+                            </div>
+                            <div class="mb-4">
+                                <span>비밀번호</span>
+                                <input type="password" name="password" class="form-control" id="password" placeholder="Password">
+                            </div>
+                            <button type="submit" class="btn btn-primary py-3 w-100 mb-4">로그인</button>
+                        </form>
                         <p class="text-center mb-0">Don't have an Account? <a href="/register">register</a></p>
                     </div>
                 </div>
