--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -36,11 +36,13 @@
         <div class="end-item">
             <div class="nav-item">
                 <a href="#" class="nav-link main-link" data-bs-toggle="dropdown">
+                    <i class="fa-solid fa-user-plus me-lg-2"></i>
                     <span class="d-none d-lg-inline-flex">Register</span>
                 </a>
             </div>
             <div class="nav-item">
                 <a href="/login" class="nav-link main-link" data-bs-toggle="dropdown">
+                    <i class="fa-solid fa-right-to-bracket me-lg-2"></i>
                     <span class="d-none d-lg-inline-flex">Login</span>
                 </a>
             </div>
