--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -35,7 +35,7 @@
         </div>
         <div class="end-item">
             <div class="nav-item">
-                <a href="#" class="nav-link main-link" data-bs-toggle="dropdown">
+                <a href="/register" class="nav-link main-link" data-bs-toggle="dropdown">
                     <i class="fa-solid fa-user-plus me-lg-2"></i>
                     <span class="d-none d-lg-inline-flex">Register</span>
                 </a>
