--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -40,16 +40,22 @@
             </div>
         </div>
         <div class="end-item">
-            <div class="nav-item">
+            <div th:if="${type == null}" class="nav-item">
                 <a href="/register" class="nav-link main-link">
                     <i class="fa-solid fa-user-plus me-lg-2"></i>
                     <span class="d-none d-lg-inline-flex">Register</span>
                 </a>
             </div>
-            <div class="nav-item">
+            <div th:if="${type == null}" class="nav-item">
                 <a href="/login" class="nav-link main-link">
                     <i class="fa-solid fa-right-to-bracket me-lg-2"></i>
                     <span class="d-none d-lg-inline-flex">Login</span>
+                </a>
+            </div>
+            <div th:if="${type != null}" class="nav-item">
+                <a href="/register" class="nav-link main-link">
+                    <i class="fa-solid fa-user me-lg-2"></i>
+                    <span class="d-none d-lg-inline-flex">Mypage</span>
                 </a>
             </div>
         </div>
