--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -17,9 +17,9 @@
     <nav th:replace="nav :: nav"></nav>
 </div>
 <div>
-    <div class="background layout-content-no-footer" >
-        <div class="main-title">
-            <span>SW융합대학 어쩌고 저쩌고 대회</span>
+    <div class="background layout-content-no-footer">
+        <div class="main-title" style="top: 250px;">
+            <span>SW융합대학 해킹방어 대회</span>
             <h1 >
                 현재 남은 시간
             </h1>
