어드민 페이지 생성, 404페이지 설정

--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -47,9 +47,10 @@
                             <span>소속</span>
                             <select class="form-control" id="affiliation" style="background: #000;">
                                 <option value="NONE" selected disabled hidden>==선택하세요==</option>
-                                <option value="SECURITY_FIRST">SecurityFirst 회원</option>
-                                <option value="SECURITY">정보보호학과</option>
-                                <option value="COMPUTER">컴퓨터소프트웨어공학과</option>
+                                <option value="YB">SecurityFirst NB</option>
+                                <option value="YB">SecurityFirst YB</option>
+                                <option value="OB">SecurityFirst OB</option>
+                                <option value="SCH">순천향대 학생</option>
                             </select>
                         </div>
                         <button onclick="register();" type="submit" class="btn btn-primary py-3 w-100 mb-4">회원가입</button>
