--- a/src/main/resources/templates/admin/admin_main.html
+++ b/src/main/resources/templates/admin/admin_main.html
@@ -35,25 +35,7 @@
 <div class="container-fluid position-relative d-flex p-0">
     <!-- Sidebar Start -->
     <div class="sidebar pe-4 pb-3">
-        <nav class="navbar bg-secondary navbar-dark">
-            <a href="index.html" class="navbar-brand mx-4 mb-3">
-                <h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>AdminPage</h3>
-            </a>
-            <div class="navbar-nav w-100">
-                <a href="/admin_main" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>메인페이지</a>
-                <a href="/admin_user" class="nav-item nav-link"><i class="fa fa-th me-2"></i>유저 관리</a>
-                <a href="/admin_problem" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>문제 관리</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>로그 관리</a>
-                    <div class="dropdown-menu bg-transparent border-0">
-                        <a href="/admin_log/access" class="dropdown-item">전체 로그</a>
-                        <a href="/admin_log/access" class="dropdown-item">접속 로그</a>
-                        <a href="/admin_log/flag" class="dropdown-item">Flag 인증 로그</a>
-                        <a href="/admin_log/download" class="dropdown-item">문제 다운로드 로그</a>
-                    </div>
-                </div>
-            </div>
-        </nav>
+        <nav th:replace="/admin/layout/admin_side :: nav"></nav>
     </div>
     <!-- Sidebar End -->
 
@@ -61,29 +43,7 @@
     <!-- Content Start -->
     <div class="content">
         <!-- Navbar Start -->
-        <nav class="navbar navbar-expand bg-secondary navbar-dark sticky-top px-4 py-0">
-            <a href="index.html" class="navbar-brand d-flex d-lg-none me-4">
-                <h2 class="text-primary mb-0"><i class="fa fa-user-edit"></i></h2>
-            </a>
-            <a href="#" class="sidebar-toggler flex-shrink-0">
-                <i class="fa fa-bars"></i>
-            </a>
-            <div class="navbar-nav align-items-center ms-auto">
-                <div class="nav-item">
-                    <a href="/mypage" class="nav-link">
-                        <i class="fa-solid fa-user me-lg-2"></i>
-                        <span class="d-none d-lg-inline-flex">Mypage</span>
-                    </a>
-
-                </div>
-                <div class="nav-item">
-                    <a href="/logout" class="nav-link">
-                        <i class="fa-solid fa-right-from-bracket me-lg-2"></i>
-                        <span class="d-none d-lg-inline-flex">Logout</span>
-                    </a>
-                </div>
-            </div>
-        </nav>
+        <nav th:replace="/admin/layout/admin_nav :: nav"></nav>
         <!-- Navbar End -->
 
 
