서버 시간 관련 서비스 적용

--- a/src/main/resources/templates/admin/admin_user.html
+++ b/src/main/resources/templates/admin/admin_user.html
@@ -55,9 +55,9 @@
               <th scope="col">Registration Time</th>
               <th scope="col">ID</th>
               <th scope="col">Name</th>
+              <th scope="col">NickName</th>
               <th scope="col">Score</th>
               <th scope="col">Type</th>
-              <th scope="col">Solved Challenge</th>
               <th scope="col">Detail</th>
             </tr>
             </thead>
