서버 시간 관련 서비스 적용

--- a/src/main/resources/templates/admin/admin_main.html
+++ b/src/main/resources/templates/admin/admin_main.html
@@ -119,7 +119,7 @@
 
 <!-- Template Javascript -->
 <script th:src="@{/js/admin/main.js}"></script>
-<script th:src="@{/js/amdin/server_time.js}"></script>
+<script th:src="@{/js/admin/server_time.js}"></script>
 </body>
 
 </html>
