--- a/src/main/resources/templates/admin/admin_main.html
+++ b/src/main/resources/templates/admin/admin_main.html
@@ -53,8 +53,7 @@
                 <div class="col-sm-12 col-xl-6">
                     <div class="bg-secondary text-center rounded p-4">
                         <div class="d-flex align-items-center justify-content-between mb-4">
-                            <h6 class="mb-0">Worldwide Sales</h6>
-                            <a href="">Show All</a>
+                            <h6 class="mb-0">TOP 5 Challenge</h6>
                         </div>
                         <canvas id="worldwide-sales"></canvas>
                     </div>
@@ -62,8 +61,7 @@
                 <div class="col-sm-12 col-xl-6">
                     <div class="bg-secondary text-center rounded p-4">
                         <div class="d-flex align-items-center justify-content-between mb-4">
-                            <h6 class="mb-0">TOP 5</h6>
-                            <a href="">Show All</a>
+                            <h6 class="mb-0">TOP 5 Ranking</h6>
                         </div>
                         <canvas id="salse-revenue"></canvas>
                     </div>
@@ -80,7 +78,7 @@
                     <h6 class="mb-0">Server Setting</h6>
                 </div>
                 <div class="table-responsive">
-                    <div style="display: flex; align-items: center;">
+                    <div style="display: flex; align-items: center; margin-bottom: 2%;">
                         <p style="text-align: left; width: 20%; display: flex; margin-bottom: 0; align-items: center;">Server-Start-Date</p>
                         <input th:value="${startDate}" style="width: 20%; margin-right: 5%;" id="start-date" name="start-date" type="date">
                         <p style="text-align: left; width: 20%; display: flex; margin-bottom: 0; align-items: center;">Server-Start-Time</p>
