--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -43,6 +43,10 @@
                             <span>이름</span>
                             <input type="text" class="form-control" id="name" placeholder="Name">
                         </div>
+                        <div class="mb-3">
+                            <span>이름</span>
+                            <input type="text" class="form-control" id="nickName" placeholder="NickName">
+                        </div>
                         <div class="mb-4">
                             <span>소속</span>
                             <select class="form-control" id="affiliation" style="background: #000;">
