--- a/src/main/resources/templates/admin/admin_quiz.html
+++ b/src/main/resources/templates/admin/admin_quiz.html
@@ -110,28 +110,17 @@
             </tbody>
           </table>
         </div>
+        <button class="btn">create</button>
       </div>
+
     </div>
     <!-- 유저 관리 End -->
 
 
-    <!-- Footer Start -->
-    <div class="container-fluid pt-4 px-4">
-      <div class="bg-secondary rounded-top p-4">
-        <div class="row">
-          <div class="col-12 col-sm-6 text-center text-sm-start">
-            &copy; <a href="/admin_main">SecurityFirst CTF</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Footer End -->
-  </div>
-  <!-- Content End -->
 
 
-  <!-- Back to Top -->
-  <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+
+
 </div>
 
 <!-- JavaScript Libraries -->
