--- a/src/main/resources/templates/admin/layout/admin_side.html
+++ b/src/main/resources/templates/admin/layout/admin_side.html
@@ -7,7 +7,7 @@
   <div class="navbar-nav w-100">
     <a href="/admin_main" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>메인페이지</a>
     <a href="/admin_user" class="nav-item nav-link"><i class="fa fa-th me-2"></i>유저 관리</a>
-    <a href="/admin_problem" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>문제 관리</a>
+    <a href="/admin_quiz" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>문제 관리</a>
     <div class="nav-item dropdown">
       <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>로그 관리</a>
       <div class="dropdown-menu bg-transparent border-0">
