--- a/src/main/resources/templates/admin/admin_quiz_create.html
+++ b/src/main/resources/templates/admin/admin_quiz_create.html
@@ -31,7 +31,17 @@
     <!-- Template Stylesheet -->
     <link th:href="@{/css/admin/style.css}" rel="stylesheet">
 </head>
-
+<style>
+    /* 시계 모양 스타일 */
+    input[type="time"]::-webkit-calendar-picker-indicator {
+        background-color: white;
+        color: red;
+    }
+    input[type="date"]::-webkit-calendar-picker-indicator {
+        background-color: white;
+        color: red;
+    }
+</style>
 <body>
 <div class="container-fluid position-relative d-flex p-0">
     <!-- Sidebar Start -->
@@ -41,12 +51,12 @@
     <div class="content">
         <nav th:replace="/admin/layout/admin_nav :: nav"></nav>
         <div class="col-sm-12 col-xl-6" style="display: flex; justify-content: center; width: 100%; height: 100%">
-            <div class="bg-secondary rounded p-4" style="width: 90%; height: 80%; margin-top: 6%;">
+            <div class="bg-secondary rounded p-4" style="width: 90%; height: 87%; margin-top: 3%;">
                 <h6 class="mb-4">Quiz Create Page</h6>
                 <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="floatingInput"
+                    <input type="email" class="form-control" id="QuizName"
                            placeholder="name@example.com">
-                    <label for="floatingInput">Quiz Name</label>
+                    <label for="QuizName">Quiz Name</label>
                 </div>
                 <div class="form-floating mb-3">
                     <select class="form-select" id="floatingSelect"
@@ -57,13 +67,39 @@
                         <option value="FORENSICS">FORENSICS</option>
                         <option value="MISC">MISC</option>
                     </select>
-                    <label for="floatingSelect">Category Select</label>
+                    <label for="floatingSelect">Category</label>
                 </div>
-
-                <div class="form-floating">
+                <div class="form-floating mb-3">
+                    <select class="form-select" id="level"
+                            aria-label="Floating label select example">
+                        <option value="LOW">LOW</option>
+                        <option value="MIDDLE">MIDDLE</option>
+                        <option value="HIGH">HIGH</option>
+                    </select>
+                    <label for="level">Level</label>
+                </div>
+                <div class="form-floating mb-3">
                                 <textarea class="form-control" placeholder="Leave a comment here"
                                           id="floatingTextarea" style="height: 150px;"></textarea>
                     <label for="floatingTextarea">Description</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="flag"
+                           placeholder="name@example.com">
+                    <label for="flag">Flag</label>
+                </div>
+                <div class="mb-3">
+                    <input class="form-control bg-dark" type="file" id="formFile">
+                </div>
+                <div class="mb-4">
+                    <label style="margin-bottom: 3px;" for="startDate">Start Date and Time</label>
+                    <div style="display: flex;">
+                        <input style="width: 45%; margin-right: 10%;" class="form-control" type="date" id="startDate">
+                        <input style="width: 45%;" class="form-control" type="time" id="startTime">
+                    </div>
+                </div>
+                <div>
+                    <button style="width: 100%;" class="btn btn-primary">Submit</button>
                 </div>
             </div>
         </div>
