solvedID Entity 수정 & registartionTime 시간 자동

--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -15,7 +15,7 @@
                 </a>
             </div>
             <div class="nav-item">
-                <a href="#" class="nav-link main-link">
+                <a href="/challenge" class="nav-link main-link">
                     <i class="fa-solid fa-trophy me-lg-2"></i>
                     <span class="d-none d-lg-inline-flex">Challenge</span>
                 </a>
