--- a/src/main/resources/templates/admin/admin_quiz.html
+++ b/src/main/resources/templates/admin/admin_quiz.html
@@ -42,70 +42,34 @@
   <div class="content">
     <!-- Navbar Start -->
     <nav th:replace="/admin/layout/admin_nav :: nav"></nav>
-    <!-- 유저 관리 -->
+    <!-- 문제 관리 -->
     <div class="container-fluid pt-4 px-4">
       <div class="bg-secondary text-center rounded p-4">
         <div class="d-flex align-items-center justify-content-between mb-4">
-          <h6 class="mb-0">유저 관리</h6>
+          <h6 class="mb-0">문제 관리</h6>
         </div>
         <div class="table-responsive">
           <table class="table text-start align-middle table-bordered table-hover mb-0">
             <thead>
             <tr class="text-white">
-              <th scope="col">Registration Time</th>
-              <th scope="col">ID</th>
-              <th scope="col">Name</th>
-              <th scope="col">NickName</th>
-              <th scope="col">Score</th>
-              <th scope="col">Type</th>
-              <th scope="col">Detail</th>
+              <th scope="col">QuizName</th>
+              <th scope="col">Writer</th>
+              <th scope="col">Category</th>
+              <th scope="col">Level</th>
+              <th scope="col">RegistrationTime</th>
+              <th scope="col">StartTime</th>
+              <th scope="col">Delete</th>
             </tr>
             </thead>
             <tbody>
-            <tr>
-              <td><input class="form-check-input" type="checkbox"></td>
-              <td>01 Jan 2045</td>
-              <td>INV-0123</td>
-              <td>Jhon Doe</td>
-              <td>$123</td>
-              <td>Paid</td>
-              <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
-            </tr>
-            <tr>
-              <td><input class="form-check-input" type="checkbox"></td>
-              <td>01 Jan 2045</td>
-              <td>INV-0123</td>
-              <td>Jhon Doe</td>
-              <td>$123</td>
-              <td>Paid</td>
-              <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
-            </tr>
-            <tr>
-              <td><input class="form-check-input" type="checkbox"></td>
-              <td>01 Jan 2045</td>
-              <td>INV-0123</td>
-              <td>Jhon Doe</td>
-              <td>$123</td>
-              <td>Paid</td>
-              <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
-            </tr>
-            <tr>
-              <td><input class="form-check-input" type="checkbox"></td>
-              <td>01 Jan 2045</td>
-              <td>INV-0123</td>
-              <td>Jhon Doe</td>
-              <td>$123</td>
-              <td>Paid</td>
-              <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
-            </tr>
-            <tr>
-              <td><input class="form-check-input" type="checkbox"></td>
-              <td>01 Jan 2045</td>
-              <td>INV-0123</td>
-              <td>Jhon Doe</td>
-              <td>$123</td>
-              <td>Paid</td>
-              <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
+            <tr th:each="quiz : ${quizzes}">
+              <td><a th:text="${quiz.quizName}" th:href="@{/admin_quiz/edit(uuid=${quiz.quizId})}"></a></td>
+              <td th:text="${quiz.quizWriter}"></td>
+              <td th:text="${quiz.category}"></td>
+              <td th:text="${quiz.level}"></td>
+              <td th:text="${quiz.registrationTime}"></td>
+              <td th:text="${quiz.startTime}"></td>
+              <td><a class="btn btn-sm btn-primary" th:href="@{/admin_quiz/delete(uuid=${quiz.quizId})}">Delete</a></td>
             </tr>
             </tbody>
           </table>
@@ -114,28 +78,23 @@
       </div>
 
     </div>
+  </div>
     <!-- 유저 관리 End -->
-
-
-
-
-
-
 </div>
 
 <!-- JavaScript Libraries -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script th:src="@{/js/chart.min.js}"></script>
-<script th:src="@{/js/easing.min.js}"></script>
-<script th:src="@{/js/waypoints.min.js}"></script>
-<script th:src="@{/js/owl.carousel.min.js}"></script>
-<script th:src="@{/js/moment.min.js}"></script>
-<script th:src="@{/js/moment-timezone.min.js}"></script>
-<script th:src="@{/js/tempusdominus-bootstrap-4.min.js}"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script th:src="@{/js/chart.min.js}"></script>
+  <script th:src="@{/js/easing.min.js}"></script>
+  <script th:src="@{/js/waypoints.min.js}"></script>
+  <script th:src="@{/js/owl.carousel.min.js}"></script>
+  <script th:src="@{/js/moment.min.js}"></script>
+  <script th:src="@{/js/moment-timezone.min.js}"></script>
+  <script th:src="@{/js/tempusdominus-bootstrap-4.min.js}"></script>
 
-<!-- Template Javascript -->
-<script th:src="@{/js/admin/main.js}"></script>
+  <!-- Template Javascript -->
+  <script th:src="@{/js/admin/main.js}"></script>
 </body>
 
 </html>
