--- a/src/main/resources/templates/admin/admin_quiz_create.html
+++ b/src/main/resources/templates/admin/admin_quiz_create.html
@@ -69,9 +69,9 @@
                 </div>
                 <div class="form-floating mb-3">
                     <select class="form-select" id="level">
-                        <option value="LOW">LOW</option>
-                        <option value="MIDDLE">MIDDLE</option>
-                        <option value="HIGH">HIGH</option>
+                        <option value="0">LOW</option>
+                        <option value="1">MIDDLE</option>
+                        <option value="2">HIGH</option>
                     </select>
                     <label for="level">Level</label>
                 </div>
