--- a/src/main/resources/templates/admin/admin_quiz.html
+++ b/src/main/resources/templates/admin/admin_quiz.html
@@ -52,7 +52,7 @@
           <table class="table text-start align-middle table-bordered table-hover mb-0">
             <thead>
             <tr class="text-white">
-              <th scope="col">QuizName</th>
+              <th scope="col">Challenge</th>
               <th scope="col">Writer</th>
               <th scope="col">Category</th>
               <th scope="col">Level</th>
@@ -62,15 +62,19 @@
             </tr>
             </thead>
             <tbody>
+
             <tr th:each="quiz : ${quizzes}">
               <td><a th:text="${quiz.quizName}" th:href="@{/admin_quiz/edit(uuid=${quiz.quizId})}"></a></td>
               <td th:text="${quiz.quizWriter}"></td>
               <td th:text="${quiz.category}"></td>
-              <td th:text="${quiz.level}"></td>
+              <td th:if="${quiz.level == 0}">Low</td>
+              <td th:if="${quiz.level == 1}">Middle</td>
+              <td th:if="${quiz.level == 2}">High</td>
               <td th:text="${quiz.registrationTime}"></td>
               <td th:text="${quiz.startTime}"></td>
               <td><a class="btn btn-sm btn-primary" th:href="@{/admin_quiz/delete(uuid=${quiz.quizId})}">Delete</a></td>
             </tr>
+
             </tbody>
           </table>
         </div>
