--- a/src/main/resources/static/css/quiz/style.css
+++ b/src/main/resources/static/css/quiz/style.css
@@ -7,7 +7,9 @@
     background: var(--secondary);
     transition: 0.5s;
 }
-
+.sidebar-challenge{
+   width : 150px;
+}
 .content{
     max-width: 1680px;
     position : fixed;
@@ -15,8 +17,15 @@
     background: var(--dark);
     transition: 0.5s;
 }
+.content .navbar .navbar-nav .nav-link.active {
+    color: var(--primary);
+}
 
+.content .navbar .item.active {
+    background: var(--dark);
+}
 .challenge{
+    width : 1430px;
     position : fixed;
     max-width: 1430px;
     min-height: 700px;
@@ -24,7 +33,7 @@
 
 
 
-@media (max-width: 991.98px) {
+@media (max-width: 1100px) {
     .sidebar {
         margin-left: -250px;
     }
@@ -37,18 +46,35 @@
         width: 100%;
         margin-left: 0;
     }
-}
-
-@media (max-width : 900px){
     .challenge{
         width : 100%;
     }
     .chbox{
         width : 100%;
-        min-width: auto;
     }
+}
+
+@media (min-width : 900px){
+    .content{
+        min-width: 1430px;
+    }
+
 }
 
 @media (max-width: 1650px){
 
+}
+
+.dimmed-bg{
+     width:100%; height:100%; top:0; left:0; background-color:black; opacity:0.7;
+}
+
+.popup{
+
+    width:auto;
+    height:auto;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    background-color:white;
 }
