퀴즈 목록 생성 완료

--- a/src/main/resources/templates/quiz/layout/quiz_side.html
+++ b/src/main/resources/templates/quiz/layout/quiz_side.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <nav class=" bg-secondary navbar-dark">
   <div class="navbar-nav sidebar-challenge">
-    <a href="/challenge/main" class="nav-item nav-link active sidebar-challenge  "><i class="fa fa-tachometer-alt me-2"></i>메인페이지</a>
+    <a href="/challenge/main" class="nav-item nav-link active sidebar-challenge  "><i class="fa fa-tachometer-alt me-2"></i>Challenge Main</a>
     <a href="/challenge/reversing" class="nav-item nav-link sidebar-challenge"><i class="fa fa-th me-2"></i>REVERSING</a>
     <a href="/challenge/pwn" class="nav-item nav-link sidebar-challenge"><i class="fa fa-th me-2"></i>PWN</a>
     <a href="/challenge/web" class="nav-item nav-link sidebar-challenge"><i class="fa fa-th me-2"></i>WEB</a>
