--- a/src/main/resources/static/css/quiz/style.css
+++ b/src/main/resources/static/css/quiz/style.css
@@ -25,10 +25,13 @@
     background: var(--dark);
 }
 .challenge{
-    width : 1430px;
+    width : 1100px;
     position : fixed;
     max-width: 1430px;
     min-height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -61,20 +64,6 @@
 
 }
 
-@media (max-width: 1650px){
-
-}
-
-.dimmed-bg{
-     width:100%; height:100%; top:0; left:0; background-color:black; opacity:0.7;
-}
-
-.popup{
-
-    width:auto;
-    height:auto;
-    top:50%;
-    left:50%;
-    transform:translate(-50%, -50%);
-    background-color:white;
+.content-in-challenge{
+    display: flex; flex-direction: column
 }
