--- a/src/main/resources/templates/quiz/quiz_main.html
+++ b/src/main/resources/templates/quiz/quiz_main.html
@@ -41,22 +41,20 @@
     <div class="sidebar">
   <nav th:replace="/quiz/layout/quiz_side :: nav"></nav>
     </div>
-    <div style="display: flex; justify-content: right; width: 100%; height: 100%">
+    <div style="display: flex; justify-content: center; width: 100%; height: 100%">
     <div class ="challenge  rounded px-4 py-0" >
 <!--      style="width: 90%; height: 80%; margin-top: 6%;"-->
-        <ul>
-            <li class="list-item">Item 1</li>
-            <li class="list-item">Item 2</li>
-            <li class="list-item">Item 3</li>
-            <li class="list-item">Item 4</li>
-            <li class="list-item">Item 5</li>
-        </ul>
+        <div class="content-in-challenge">
+        <h6 th:text="${challenge}" style="font-size: 1.5em;">Category</h6>
+            <ul>
+                <li class="list-item" th:each="item : ${items}" th:text="${item}">Item</li>
+            </ul>
+            </div>
         <!-- Dimmed background -->
-        <div id="dimmed-bg" style="display: none; position: fixed;" ></div>
+        <div id="dimmed-bg" style="display: none; position: fixed;  width:100%; height:100%; top:0; left:0; background-color:black; opacity:0.7;" ></div>
 
         <!-- Popup window -->
-        <div id="popup" style="display:none;
-    position:fixed;" >
+        <div id="popup" style="display:none;width:auto;height:auto;top:50%;left:50%;transform:translate(-50%, -50%);background-color:white;position:fixed;" >
             <h6 class="mb-4 chbox">Quiz Create Page</h6>
             <div class="form-floating mb-3 chbox">
                 <input type="email" class="form-control" id="floatingInput"
@@ -80,7 +78,6 @@
                                           id="floatingTextarea" style="height: 150px;"></textarea>
                 <label for="floatingTextarea">Description</label>
             </div>
-            <button onclick='closePopup()'>Close</button>
         </div>
 
     </div>
