--- a/src/main/resources/templates/admin/admin_quiz.html
+++ b/src/main/resources/templates/admin/admin_quiz.html
@@ -2,96 +2,101 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>SecurityFirst CTF Admin Page</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+    <meta charset="utf-8">
+    <title>SecurityFirst CTF Admin Page</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
 
-  <!-- Favicon -->
-  <link href="img/favicon.ico" rel="icon">
+    <!-- Favicon -->
+    <link href="img/favicon.ico" rel="icon">
 
-  <!-- Google Web Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@500;700&display=swap"
+          rel="stylesheet">
 
-  <!-- Icon Font Stylesheet -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-  <!-- Libraries Stylesheet -->
-  <link th:href="@{/css/owl.carousel.min.css}" rel="stylesheet">
-  <link th:href="@{/css/tempusdominus-bootstrap-4.min.css}" rel="stylesheet" />
+    <!-- Libraries Stylesheet -->
+    <link th:href="@{/css/owl.carousel.min.css}" rel="stylesheet">
+    <link th:href="@{/css/tempusdominus-bootstrap-4.min.css}" rel="stylesheet"/>
 
-  <!-- Customized Bootstrap Stylesheet -->
-  <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+    <!-- Customized Bootstrap Stylesheet -->
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
 
-  <!-- Template Stylesheet -->
-  <link th:href="@{/css/admin/style.css}" rel="stylesheet">
+    <!-- Template Stylesheet -->
+    <link th:href="@{/css/admin/style.css}" rel="stylesheet">
 </head>
-
+<style>
+  @media (max-width: 888px) {
+    .container-fluid {
+      height: 968px;
+    }
+  }
+</style>
 <body>
 <div class="container-fluid position-relative d-flex p-0">
-  <!-- Sidebar Start -->
-  <div class="sidebar pe-4 pb-3">
-    <nav th:replace="/admin/layout/admin_side :: nav"></nav>
-  </div>
-  <!-- Sidebar End -->
-  <!-- Content Start -->
-  <div class="content">
-    <!-- Navbar Start -->
-    <nav th:replace="/admin/layout/admin_nav :: nav"></nav>
-    <!-- 문제 관리 -->
-    <div class="container-fluid pt-4 px-4">
-      <div class="bg-secondary text-center rounded p-4">
-        <div class="d-flex align-items-center justify-content-between mb-4">
-          <h6 class="mb-0">문제 관리</h6>
-        </div>
-        <div class="table-responsive">
-          <table class="table text-start align-middle table-bordered table-hover mb-0">
-            <thead>
-            <tr class="text-white">
-              <th scope="col">Challenge</th>
-              <th scope="col">Writer</th>
-              <th scope="col">Category</th>
-              <th scope="col">Level</th>
-              <th scope="col">RegistrationTime</th>
-              <th scope="col">StartTime</th>
-              <th scope="col">Delete</th>
-            </tr>
-            </thead>
-            <tbody id="quiz-content">
-            </tbody>
-          </table>
-        </div>
-        <button class="btn">create</button>
-        <div id="paging">
-
-        </div>
-      </div>
-
+    <!-- Sidebar Start -->
+    <div class="sidebar pe-4 pb-3">
+        <nav th:replace="/admin/layout/admin_side :: nav"></nav>
     </div>
-  </div>
+    <!-- Sidebar End -->
+    <!-- Content Start -->
+    <div class="content">
+        <!-- Navbar Start -->
+        <nav th:replace="/admin/layout/admin_nav :: nav"></nav>
+        <!-- 문제 관리 -->
+        <div class="container-fluid pt-4 px-4" style="height: 90.5%; position: relative;">
+            <div class="bg-secondary text-center rounded p-4" style="height: 100%;">
+                <div class="d-flex align-items-center justify-content-between mb-4">
+                    <h6 class="mb-0">문제 관리</h6>
+                </div>
+                <div class="table-responsive">
+                    <table class="table text-start align-middle table-bordered table-hover mb-0">
+                        <thead>
+                        <tr class="text-white">
+                            <th scope="col">Challenge</th>
+                            <th scope="col">Writer</th>
+                            <th scope="col">Category</th>
+                            <th scope="col">Level</th>
+                            <th scope="col">RegistrationTime</th>
+                            <th scope="col">StartTime</th>
+                            <th scope="col">Delete</th>
+                        </tr>
+                        </thead>
+                        <tbody id="quiz-content">
+                        </tbody>
+                    </table>
+                </div>
+                <div style="position: absolute; bottom: 3%;left: 0;width: 100%;text-align: center;">
+                    <div id="paging" style="text-align: center;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- 유저 관리 End -->
 </div>
 
 <!-- JavaScript Libraries -->
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script th:src="@{/js/chart.min.js}"></script>
-  <script th:src="@{/js/easing.min.js}"></script>
-  <script th:src="@{/js/waypoints.min.js}"></script>
-  <script th:src="@{/js/owl.carousel.min.js}"></script>
-  <script th:src="@{/js/moment.min.js}"></script>
-  <script th:src="@{/js/moment-timezone.min.js}"></script>
-  <script th:src="@{/js/tempusdominus-bootstrap-4.min.js}"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script th:src="@{/js/chart.min.js}"></script>
+<script th:src="@{/js/easing.min.js}"></script>
+<script th:src="@{/js/waypoints.min.js}"></script>
+<script th:src="@{/js/owl.carousel.min.js}"></script>
+<script th:src="@{/js/moment.min.js}"></script>
+<script th:src="@{/js/moment-timezone.min.js}"></script>
+<script th:src="@{/js/tempusdominus-bootstrap-4.min.js}"></script>
 
-  <!-- Template Javascript -->
-  <script th:src="@{/js/admin/main.js}"></script>
+<!-- Template Javascript -->
+<script th:src="@{/js/admin/main.js}"></script>
 <script th:src="@{/js/admin/admin_quiz.js}"></script>
 <script>
-  renderPagination(1);
+    renderPagination(1, "ALL");
 </script>
 </body>
 
