로그 controller create

--- a/src/main/resources/templates/admin/admin_quiz_edit.html
+++ b/src/main/resources/templates/admin/admin_quiz_edit.html
@@ -52,10 +52,10 @@
     <nav th:replace="/admin/layout/admin_nav :: nav"></nav>
     <div class="col-sm-12 col-xl-6" style="display: flex; justify-content: center; width: 100%; height: 100%">
       <div class="bg-secondary rounded p-4" style="width: 90%; height: 87%; margin-top: 3%;">
-        <h6 class="mb-4">Quiz Create Page</h6>
+        <h6 class="mb-4">Challenge Create Page</h6>
         <div class="form-floating mb-3">
           <input type="text" class="form-control" id="quizName" th:value="${quiz.quizName}">
-          <label for="QuizName">Quiz Name</label>
+          <label for="QuizName">Challenge Name</label>
         </div>
         <div class="form-floating mb-3">
           <select class="form-select" id="category">
