--- a/src/main/resources/templates/admin/layout/admin_side.html
+++ b/src/main/resources/templates/admin/layout/admin_side.html
@@ -21,9 +21,9 @@
       <a th:if="${type} == 'LOG'" href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>로그 관리</a>
       <a th:if="${type} != 'LOG'" href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>로그 관리</a>
       <div class="dropdown-menu bg-transparent border-0">
-        <a href="/admin_log/access" class="dropdown-item">문제 접속 로그</a>
-        <a href="/admin_log/flag" class="dropdown-item">Flag 인증 로그</a>
-        <a href="/admin_log/download" class="dropdown-item">문제 다운로드 로그</a>
+        <a href="/admin_log/ACCESS" class="dropdown-item">문제 접속 로그</a>
+        <a href="/admin_log/FLAG" class="dropdown-item">Flag 인증 로그</a>
+        <a href="/admin_log/DOWNLOAD" class="dropdown-item">문제 다운로드 로그</a>
       </div>
     </div>
   </div>
