--- a/src/main/resources/templates/admin/admin_user.html
+++ b/src/main/resources/templates/admin/admin_user.html
@@ -35,13 +35,13 @@
 <div class="container-fluid position-relative d-flex p-0">
   <!-- Sidebar Start -->
   <div class="sidebar pe-4 pb-3">
-    <nav th:replace="/admin/layout/admin_side :: nav"></nav>
+    <nav th:replace="~{/admin/layout/admin_side :: nav}"></nav>
   </div>
   <!-- Sidebar End -->
   <!-- Content Start -->
   <div class="content">
     <!-- Navbar Start -->
-    <nav th:replace="/admin/layout/admin_nav :: nav"></nav>
+    <nav th:replace="~{admin/layout/admin_nav :: nav}"></nav>
     <!-- 유저 관리 -->
     <div class="container-fluid pt-4 px-4">
       <div class="bg-secondary text-center rounded p-4">
