--- a/src/main/resources/templates/admin/admin_main.html
+++ b/src/main/resources/templates/admin/admin_main.html
@@ -37,7 +37,7 @@
 <div class="container-fluid position-relative d-flex p-0">
     <!-- Sidebar Start -->
     <div class="sidebar pe-4 pb-3">
-        <nav th:replace="/admin/layout/admin_side :: nav"></nav>
+        <nav th:replace="~{/admin/layout/admin_side :: nav}"></nav>
     </div>
     <!-- Sidebar End -->
 
@@ -45,7 +45,7 @@
     <!-- Content Start -->
     <div class="content">
         <!-- Navbar Start -->
-        <nav th:replace="/admin/layout/admin_nav :: nav"></nav>
+        <nav th:replace="~{admin/layout/admin_nav :: nav}"></nav>
         <!-- Navbar End -->
         <!-- Sales Chart Start -->
         <div class="container-fluid pt-4 px-4">
